# py-vuln-scout

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  py-vuln-scout.toml.example  pyproject.toml  quickstart.sh
.github/workflows/: ci.yml
examples/: flask_xss.py  simple_xss.py
src/py_vuln_scout/: __init__.py  cli.py  config.py
src/py_vuln_scout/analysis/: ast_utils.py  fingerprint.py  taint_primitives.py
src/py_vuln_scout/cache/: disk_cache.py
src/py_vuln_scout/engines/: __init__.py  explainer_engine.py  llm_engine.py  merger.py  regex_engine.py  validator_engine.py
src/py_vuln_scout/llm/: ollama_client.py  prompt_templates.py
src/py_vuln_scout/output/: findings.py
src/py_vuln_scout/output/schemas/: finding.schema.json
src/py_vuln_scout/rules/cwe-79/: llm.json  regex.json
src/py_vuln_scout/rules/schema/: llm_rule.schema.json  regex_rule.schema.json
tests/: conftest.py  test_cli.py  test_config.py  test_explainer_engine.py  test_findings_schema.py  test_llm_engine.py  test_merger.py  test_regex_engine.py  test_validator_engine.py
